# pyhandbrake

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  build_and_test.yml  deploy.yml  static_checks.yml  test.yml
src/handbrake/: __init__.py  __main__.py  errors.py  mock.py  models.py  opts.py  progresshandler.py  runner.py
src/handbrake/models/: progress.py  title.py
tests/: helpers.py  test_convert.py  test_handbrake.py  test_presets.py  test_scan.py  test_version.py
