[tool.poetry]
name = "pyhandbrake"
version = "0.1.0"
description = ""
authors = ["Dominic Price <dominicprice@outlook.com>"]
readme = "README.md"
packages = [{include = "handbrake", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
